# joyagent-local-knowledge-base

./: .gitignore  Dockerfile  LICENSE  README.md  README_DataAgent.md  test.txt
genie-backend/src/main/java/com/jd/genie/agent/tool/common/: KnowledgeRAGTool.java
genie-backend/src/main/java/com/jd/genie/config/: GenieConfig.java
genie-backend/src/main/java/com/jd/genie/controller/: GenieController.java  KnowledgeRAGController.java
genie-backend/src/main/java/com/jd/genie/model/req/: KnowledgeRAGReq.java
genie-backend/src/main/java/com/jd/genie/service/: KnowledgeRAGService.java
genie-backend/src/main/resources/: application.yml
genie-tool/: .env_template  pyproject.toml  run_evaluation.py  server.py
genie-tool/genie_tool/api/: __init__.py  data.py  knowledge_rag.py  tool.py
genie-tool/genie_tool/model/: protocal.py
genie-tool/genie_tool/tool/: nl2sql.py
genie-tool/genie_tool/tool/knowledge_rag/: .last_full_update  __init__.py  file_processor.py  incremental_updater.py  knowledge_rag.py  rag_evaluator.py  vector_store.py
genie-tool/genie_tool/util/: embedding_util.py  llm_util.py  prompt_util.py  qdrant_utils.py
ui/: package-lock.json  package.json  vite.config.ts
ui/src/components/ActionView/: FileList.tsx
ui/src/components/ChatView/: index.tsx
ui/src/components/Dialogue/: DataDialogue.tsx
ui/src/layout/: index.tsx
ui/src/pages/KnowledgeRAG/: index.css  index.tsx
ui/src/router/: index.tsx
ui/src/services/: agent.ts
ui/src/utils/: querySSE.ts
